<resources>
    <string name="app_name">BetFootball</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="banner">Bet Football</string>
    <string name="banner_description">Have fun! Win it!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logo">App Logo</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hello">Hello</string>
    <string name="quick_bet">Quick bet</string>
    <string name="upcoming_matches">Upcoming matches</string>
    <string name="your_profile">Your profile</string>
    <string name="your_teams">Your teams</string>
    <string name="your_results">Your results</string>
    <string name="create_team">Create new team</string>
    <string name="join_team">Join team</string>
    <string name="team_name">Team name</string>
    <string name="settings">Settings</string>
    <string name="team_code">Team code</string>
    <string name="copy">Copy</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_match">Add match</string>
    <string name="fill_match_info">Fill Match Info</string>
    <string name="dash">-</string>
    <string name="add_and_calculate">Add and calculate</string>
    <string name="change_nickname">Change nickname</string>
    <string name="new_nickname">New nickname</string>
    <string name="score">SCORE</string>
    <string name="place_a_bet">PLACE A BET</string>
    <string name="goals">GOALS</string>
    <string name="placed">You already placed a bet on this match!</string>
    <string name="team_leader">Team Leader:</string>
    <string name="leader">LEADER</string>
    <string name="nickname">Nickname</string>
    <string name="your_results_activity">Your Results</string>
    <string name="match">MATCH</string>
    <string name="block_betting">BLOCK BETTING</string>
    <string name="actual_matchday">ACTUAL MATCHDAY</string>
    <string name="change">CHANGE</string>
    <string name="matchdaydot">MATCHDAY :</string>
    <string name="matchday">MATCHDAY</string>
    <string name="team_owner">Team Owner:</string>
    <string name="matchday_leader">Matchday Leader:</string>
    <string name="season_leader">Season Leader:</string>
    <string name="season_prize">Season Prize:</string>

</resources>