<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/banner"
        android:layout_width="135dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/banner"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/profile"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:text="@string/your_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <Button
        android:id="@+id/matches"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:text="@string/upcoming_matches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <Button
        android:id="@+id/results"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:text="@string/your_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams" />

    <Button
        android:id="@+id/settings"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <Button
        android:id="@+id/teams"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:text="@string/your_teams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matches" />

    <Button
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="85dp"
        android:text="@string/admin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>