<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/banner"
        android:layout_width="135dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/banner"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/teamNameEdit"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/team_name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/createTeam"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameEdit"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="179dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>