<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/banner"
        android:layout_width="135dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/banner"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/teamCode"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/joinTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/joinTeam"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/join_team"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createTeam"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_team"
        app:layout_constraintBottom_toTopOf="@+id/teamCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="179dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarSize="5dp"
        app:layout_constraintBottom_toTopOf="@+id/createTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

</androidx.constraintlayout.widget.ConstraintLayout>